// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main screen empty card should match snapshot 1`] = `
Object {
  "background": Array [
    Object {
      "color": "#1aeaf6ec",
      "type": "solid",
    },
  ],
  "border": Object {
    "corner_radius": 28,
  },
  "height": Object {
    "type": "match_parent",
    "weight": 1,
  },
  "id": "main_screen_card_0_0",
  "items": Array [
    Object {
      "items": Array [
        Object {
          "font_size": 32,
          "font_weight": "medium",
          "line_height": 40,
          "text": "Москва",
          "text_color": "#80ffffff",
          "type": "text",
        },
      ],
      "orientation": "horizontal",
      "type": "container",
    },
    Object {
      "delimiter_style": Object {
        "color": "#0fff",
      },
      "height": Object {
        "type": "match_parent",
      },
      "type": "separator",
    },
    Object {
      "content_alignment_horizontal": "left",
      "content_alignment_vertical": "center",
      "items": Array [
        Object {
          "font_size": 88,
          "font_weight": "medium",
          "line_height": 101,
          "text": "7",
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "content_alignment_horizontal": "center",
          "content_alignment_vertical": "top",
          "height": Object {
            "type": "fixed",
            "value": 68,
          },
          "items": Array [
            Object {
              "content_alignment_horizontal": "center",
              "content_alignment_vertical": "center",
              "items": Array [
                Object {
                  "delimiter_style": Object {
                    "color": "#0fff",
                  },
                  "type": "separator",
                  "width": Object {
                    "type": "fixed",
                    "value": 4.08,
                  },
                },
                Object {
                  "background": Array [
                    Object {
                      "color": "#E55245",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 34,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 63.919999999999995,
                  },
                  "items": Array [],
                  "type": "container",
                  "width": Object {
                    "type": "fixed",
                    "value": 63.919999999999995,
                  },
                },
              ],
              "margins": Object {
                "top": 1,
              },
              "orientation": "horizontal",
              "type": "container",
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "image_url": "https://dialogs.s3.yandex.net/smart_displays/main-screen/cards/jams/traffic_lights_icon.png",
              "preload_required": 1,
              "type": "image",
            },
          ],
          "margins": Object {
            "left": 22,
          },
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "fixed",
            "value": 68,
          },
        },
      ],
      "orientation": "horizontal",
      "type": "container",
    },
    Object {
      "delimiter_style": Object {
        "color": "#0fff",
      },
      "height": Object {
        "type": "match_parent",
      },
      "type": "separator",
    },
    Object {
      "content_alignment_horizontal": "left",
      "content_alignment_vertical": "center",
      "items": Array [
        Object {
          "content_alignment_horizontal": "center",
          "content_alignment_vertical": "center",
          "items": Array [
            Object {
              "background": Array [
                Object {
                  "color": "#E55245",
                  "type": "solid",
                },
              ],
              "border": Object {
                "corner_radius": 18,
              },
              "font_size": 28,
              "font_weight": "medium",
              "height": Object {
                "type": "fixed",
                "value": 36,
              },
              "line_height": 36,
              "text": "8",
              "text_alignment_horizontal": "center",
              "text_alignment_vertical": "center",
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "fixed",
                "value": 52,
              },
            },
            Object {
              "font_size": 28,
              "font_weight": "medium",
              "height": Object {
                "type": "fixed",
                "value": 36,
              },
              "line_height": 36,
              "margins": Object {
                "top": 4,
              },
              "text": "17",
              "text_alignment_horizontal": "center",
              "text_color": "#80eaf6ec",
              "type": "text",
              "width": Object {
                "type": "match_parent",
              },
            },
          ],
          "orientation": "vertical",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "horizontal",
      "type": "container",
      "width": Object {
        "type": "match_parent",
      },
    },
  ],
  "paddings": Object {
    "bottom": 24,
    "left": 24,
    "right": 24,
    "top": 24,
  },
  "type": "container",
  "width": Object {
    "type": "match_parent",
    "weight": 1,
  },
}
`;

exports[`Main screen empty card should match snapshot with error 1`] = `
Object {
  "background": Array [
    Object {
      "color": "#1aeaf6ec",
      "type": "solid",
    },
  ],
  "border": Object {
    "corner_radius": 28,
  },
  "height": Object {
    "type": "match_parent",
    "weight": 1,
  },
  "id": "main_screen_card_0_0",
  "items": Array [
    Object {
      "items": Array [
        Object {
          "font_size": 32,
          "font_weight": "medium",
          "line_height": 40,
          "text": "Пробки",
          "text_color": "#80ffffff",
          "type": "text",
        },
      ],
      "orientation": "horizontal",
      "type": "container",
    },
    Object {
      "delimiter_style": Object {
        "color": "#0fff",
      },
      "height": Object {
        "type": "match_parent",
      },
      "type": "separator",
    },
    Object {
      "font_size": 28,
      "font_weight": "medium",
      "line_height": 36,
      "text": "Ошибка сети :(
Не могу показать уровень пробок. Проверьте интернет.",
      "text_color": "#80ffffff",
      "type": "text",
    },
  ],
  "paddings": Object {
    "bottom": 24,
    "left": 24,
    "right": 24,
    "top": 24,
  },
  "type": "container",
  "width": Object {
    "type": "match_parent",
    "weight": 1,
  },
}
`;
